--- a/paygate/templates/api-documentation.html
+++ b/paygate/templates/api-documentation.html
@@ -43,109 +43,120 @@
 
   <body>
     <nav
-        class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
-      >
+      class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"
+    >
+      <div class="container">
+        <a class="navbar-brand logo" href="#">SafePay</a
+        ><button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navcol-1"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'features' %}">API Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'doc' %}">API Documentation</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'pay' %}">Payment Simulation</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main class="page faq-page">
+      <section class="clean-block clean-faq dark">
         <div class="container">
-          <a class="navbar-brand logo" href="#">SafePay</a
-          ><button
-            data-bs-toggle="collapse"
-            class="navbar-toggler"
-            data-bs-target="#navcol-1"
-          >
-            <span class="visually-hidden">Toggle navigation</span
-            ><span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navcol-1">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'features' %}">API Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'doc' %}">API Documentation</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'pay' %}"
-                  >Payment Simulation</a
-                >
-              </li>
-            </ul>
+          <div class="block-heading">
+            <h2 class="text-info">FAQ</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
+              urna, dignissim nec auctor in, mattis vitae leo.
+            </p>
+          </div>
+          <div class="block-content">
+            <div class="faq-item">
+              <h4 class="question">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </h4>
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
+                  ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
+                  ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <h4 class="question">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </h4>
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  quam urna, dignissim nec auctor in, mattis vitae leo.
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <h4 class="question">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </h4>
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                  quam urna, dignissim nec auctor in, mattis vitae leo. Lorem
+                  ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem
+                  ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
-    <main class="page faq-page">
-        <section class="clean-block clean-faq dark">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">FAQ</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                </div>
-                <div class="block-content">
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main><!-- Start: Footer Dark -->
+      </section>
+    </main>
+    <!-- Start: Footer Dark -->
     <footer class="page-footer dark">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <h5>Get started</h5>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sign up</a></li>
-                        <li><a href="#">Downloads</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>About us</h5>
-                    <ul>
-                        <li><a href="#">Company Information</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Reviews</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Support</h5>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Forums</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Legal</h5>
-                    <ul>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div
+        class="my_row"
+        style="
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+          align-items: center;
+        "
+      >
+        <div>
+          <h5><a href="{% url 'home' %}">Home</a></h5>
         </div>
-        <div class="footer-copyright">
-            <p>© 2022 Copyright Text</p>
+        <div>
+          <h5><a href="{% url 'features' %}">Features Provided</a></h5>
         </div>
+        <div>
+          <h5><a href="{% url 'doc' %}">Documentation</a></h5>
+        </div>
+        <div>
+          <h5><a href="{% url 'pay' %}">Simulation</a></h5>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>© 2022 Copyright Text</p>
+      </div>
+    </footer>
     <!-- End: Footer Dark -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
