--- a/paygate/templates/features.html
+++ b/paygate/templates/features.html
@@ -141,46 +141,30 @@
     </main>
     <!-- Start: Footer Dark -->
     <footer class="page-footer dark">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3">
-            <h5>Get started</h5>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Sign up</a></li>
-              <li><a href="#">Downloads</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-3">
-            <h5>About us</h5>
-            <ul>
-              <li><a href="#">Company Information</a></li>
-              <li><a href="#">Contact us</a></li>
-              <li><a href="#">Reviews</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-3">
-            <h5>Support</h5>
-            <ul>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Help desk</a></li>
-              <li><a href="#">Forums</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-3">
-            <h5>Legal</h5>
-            <ul>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-          </div>
+      <div class=" my_row" style="
+      display:flex;
+      flex-direction:row;
+      justify-content:space-evenly;
+      align-items:center;
+
+      ">
+        <div>
+          <h5><a href="{% url 'home' %}">Home</a></h5> 
+        </div>
+        <div>
+          <h5><a href="{% url 'features' %}">Features Provided</a></h5>            
+        </div>
+        <div>
+          <h5><a href="{% url 'doc' %}">Documentation</a></h5>           
+        </div>
+        <div>
+          <h5><a href="{% url 'pay' %}">Simulation</a></h5>            
         </div>
       </div>
-      <div class="footer-copyright">
-        <p>© 2022 Copyright Text</p>
-      </div>
-    </footer>
+    <div class="footer-copyright">
+      <p>© 2022 Copyright Text</p>
+    </div>
+  </footer>
     <!-- End: Footer Dark -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
