--- a/paygate/templates/home.html
+++ b/paygate/templates/home.html
@@ -36,6 +36,10 @@
       rel="stylesheet"
       href="{% static 'paygate/css/bootstrap.min.css' %}"
     />
+    <link
+      rel="stylesheet"
+      href="{% static 'paygate/css/animate.css' %}"
+    />
   </head>
   <body id="mybody">
     {% comment %} HEADER {% endcomment %}
@@ -80,7 +84,7 @@
         <section
           class="mytop"
           style="
-            background-image: url('{% static "paygate/images/Group-13.svg" %}');
+            background-image: url('{% static "paygate/images/Group 12.svg" %}');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -92,10 +96,11 @@
             position: relative;
           "
         >
-          <div class="text" style="color: #000;
-          font-weight: bold;
-          margin-left: 20px;
-          margin-top: -200px">
+          <div class="text" style="
+              color: #000;
+              font-weight: bold;
+              margin-left: 20px;
+              margin-top: -200px">
             <h2 style="font-size: 2.5rem;
             font-weight: 900;">
               Just do transactions, <br />
@@ -108,6 +113,10 @@
               hampering the security
             </p>
           </div>
+          <img style="
+          height:750px;
+          margin-top:-100px;
+          " class="slide-top" src="{% static 'paygate/images/Group 15.svg' %}" alt="cards">
         </section>
       </div>
     </main>
