--- a/paygate/templates/payment-page.html
+++ b/paygate/templates/payment-page.html
@@ -81,7 +81,7 @@
     </nav>
     <main class="page payment-page">
       <section class="clean-block payment-form dark">
-        {% for message in messages %}
+        {% if messages %} {% for message in messages %}
         <div
           class="alert {{message.tags}} alert-dismissible fade show"
           role="alert"
@@ -94,7 +94,7 @@
             aria-label="Close"
           ></button>
         </div>
-        {% endfor %}
+        {% endfor %} {% endif %}
         <div class="container">
           <div class="block-heading">
             <h2 class="text-info">Payment Gateway Simulation</h2>
@@ -115,71 +115,73 @@
             <form method="POST">
               {% csrf_token %}
               <div class="card-details">
-                <h3 class="title">Card Details of Sender</h3>
-                <div class="row">
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="card_number"
-                        >Card Number</label
-                      >
-                      <input
-                        class="form-control"
-                        type="text"
-                        id="sender_accno"
-                        placeholder="Card Number"
-                        name="sender_accno"
-                      />
-                    </div>
-                  </div>
-                  <div class="col-sm-5">
-                    <div class="mb-3">
-                      <label class="form-label">Expiration date</label>
-                      <div class="input-group expiration-date">
+                <div>
+                  <h3 class="title">Card Details of Sender</h3>
+                  <div class="row">
+                    <div class="col-sm-7">
+                      <div class="mb-3">
+                        <label class="form-label" for="card_number"
+                          >Card Number</label
+                        >
                         <input
-                          id="sender_expirydate"
                           class="form-control"
                           type="text"
-                          placeholder="DD"
-                          name="sender_expirydate"
-                        />
-                        <input
-                          id="sender_expirymonth"
-                          class="form-control"
-                          type="text"
-                          placeholder="MM"
-                          name="sender_expirymonth"
-                        /><input
-                          id="sender_expiryyear"
-                          class="form-control"
-                          type="text"
-                          placeholder="YY"
-                          name="sender_expiryyear"
+                          id="sender_accno"
+                          placeholder="Card Number"
+                          name="sender_accno"
                         />
                       </div>
                     </div>
-                  </div>
-                  <div class="col-sm-7">
-                    <div class="mb-3">
-                      <label class="form-label" for="amount">Amount</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="sender_amount"
-                        placeholder="Amount"
-                        name="sender_amount"
-                      />
+                    <div class="col-sm-5">
+                      <div class="mb-3">
+                        <label class="form-label">Expiration date</label>
+                        <div class="input-group expiration-date">
+                          <input
+                            id="sender_expirydate"
+                            class="form-control"
+                            type="text"
+                            placeholder="DD"
+                            name="sender_expirydate"
+                          />
+                          <input
+                            id="sender_expirymonth"
+                            class="form-control"
+                            type="text"
+                            placeholder="MM"
+                            name="sender_expirymonth"
+                          /><input
+                            id="sender_expiryyear"
+                            class="form-control"
+                            type="text"
+                            placeholder="YY"
+                            name="sender_expiryyear"
+                          />
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="mb-3">
-                      <label class="form-label" for="cvv">CVV</label
-                      ><input
-                        class="form-control"
-                        type="text"
-                        id="sender_cvv"
-                        placeholder="CVV"
-                        name="sender_cvv"
-                      />
+                    <div class="col-sm-7">
+                      <div class="mb-3">
+                        <label class="form-label" for="amount">Amount</label
+                        ><input
+                          class="form-control"
+                          type="text"
+                          id="sender_amount"
+                          placeholder="Amount"
+                          name="sender_amount"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="mb-3">
+                        <label class="form-label" for="cvv">CVV</label
+                        ><input
+                          class="form-control"
+                          type="text"
+                          id="sender_cvv"
+                          placeholder="CVV"
+                          name="sender_cvv"
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
